# llm-pre-send-leakage-benchmark

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REPRODUCING.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
corpus/: corpus_schema.md  corpus_v1.jsonl  generate.py
tests/: test_corpus_generator.py  test_meta.py
